# events-retrieval-system

./: .gitignore  app.py  build_indexes.py  plan.md  project_flow.md  pyproject.toml  test_gemini.py
data/: Nutrition_GA4_Events_with_Descriptions.xlsx  femverse_pregnancy_analytics_events.xlsx  fitness_analytics_events_with_descriptions.xlsx  fitness_final.xlsx  nutrition.xlsx  period_module_analytics_events.xlsx
data/data2/: Nutrition_Screen_Event_Descriptions.xlsx  Nutrition_Screen_GA4_Events.xlsx  femverse_pregnancy_analytics_events.xlsx  fitness.xlsx  fitness_analytics_events.xlsx
src/: config.py  indexer.py  models.py  parser.py  query.py  reranker.py  retriever.py
